2003-08-31 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Changed AC_CONFIG_HEADER to AM_CONFIG_HEADER

	* tests/stack.geda: Updated test files since one of the symbols got
	a missing power/gnd net.

	* examples/*.sch, tests/*.sch: Updated schematic files to 20030901

	* scheme/Makefile.am, scheme/gnet-gsch2pcb.scm: Added new PCB helper
	backend written by Bill Wilson 

2003-08-24 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/gschem2pcb: Moved script into this directory from src/

        * configure.ac: Removed redundant tests (gtk+, guile) and improved
        the configuration summary message.

2003-08-23 Ales Hvezda   <ahvezda@geda.seul.org>
	
	* include/globals.h, src/globals.c, src/gnetlist.c, src/parsecmd.c:
	Added the -m flag which allows the user to specify scheme code after
	the backend is loaded, but before the guile procedure is executed.

        * src/parsecmd.c: Cleaned up help message a little.

        * src/gnetlist.1: Updated manpage a little

2003-07-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Renamed from configure.in.

	* configure.ac: Bunch of cleanup to start using pkg-config for all
	libraries.  Unfortunately, gnetlist now links against libgtk*.  I 
	might fix that in the future.

	* *.in, *.h, etc: Removed a bunch of old unneeded auto* files.

2003-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/g_netlist.c, gnetlist.c: Applied Carlos Nieves Onega's warning
	cleanup patch.

2003-06-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/prototype.h, scheme/Makefile.am, scheme/gnet-drc2.scm
 	src/g_netlist.c src/g_register.c: Integrated Carlos Nieves Onega's
	drc2 backend.  Thanks.

	* src/g_netlist.c: Renamed the newly added guile functions a little.
	(removed the "*used-of-package" string; just for consistancy with
	 the other guile functions).

2003-06-14 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/globals.h, src/globals.c, src/gnetlist.c,
	src/parsecmd.c: Applied Carlos Nieves Onega's -l load scheme