@@ -1,4 +1,4 @@
-;;; gEDA - GNU Electronic Design Automation
+;; gEDA - GNU Electronic Design Automation
 ;;; gnetlist - GNU Netlist
 ;;; Copyright (C) 1998-2000 Ales V. Hvezda
 ;;;
@@ -32,12 +32,16 @@
 ;; Details and documentation at http://www.brorson.com/gEDA/SPICE/
 ;;
 ;;  Change log:
-;;  3.5.2003 -- Started hacking.  SDB
+;;  3.5.2003 -- Started hacking.  SDB.
 ;;  3.17.2003 -- 2nd version.  Hacked to allow for .SUBCKT files to model ics.
 ;;               Changed write-ic.  Added get-file-type.  Added 
-;;               write-subcircuit.  SDB
+;;               write-subcircuit.  SDB.
 ;;  3.31.2003 -- 3rd version.  Hacked to enable creating .SUBCKT schematics for
 ;;               hierarchical circuit modeling.
+;;  8.29.2003 -- 4th version.  Include patches from Ken Healy to sort netlist, 
+;;               code by SDB to use gnetlist command line args in Scheme fcns,
+;;               as well as from Theo Deckers to fix strange problem with '.SUBCKT 
+;;               quoting.
 ;;
 
 ;;-----------------------------------------------------------
@@ -204,8 +208,7 @@
 (define insert-text-file
   (lambda (model-filename port)
     (let ((model-file (open-input-file model-filename)) )
-      ;; (display "-- In insert-text-file. . . . \n")
-	(let while ((model-line (read-line model-file)))
+      (let while ((model-line (read-line model-file)))
 	  (if (not (eof-object? model-line))
 		   (begin
 		     (display (string-append model-line "\n") port)
@@ -349,12 +352,14 @@
   (lambda (model-filename)
     (let ((model-file (open-input-file model-filename)) )
       (let while ((file-line (read-line model-file)) )
+	
+	;; debug display . . .
 	;; (display (string-append "In get-file-type, file-line = " file-line "\n"))
 	
 	(cond
 	 ((eof-object? file-line)
 	  (begin
-	    (display "In get-file-type, found eof-object before .MODEL or .SUBCKT\n")
+	    ;; (display "In get-file-type, found eof-object before .MODEL or .SUBCKT\n")
 	    ('OTHER)
 	  )
 	 )
@@ -382,7 +387,7 @@
 	       (string=? (substring file-line 0 7) ".subckt")
 	      )
 	      ;; (display (string-append "Found ., type = " (substring file-line 0 7) "\n"))
-	      '.SUBCKT
+	      ".SUBCKT"
 	     )
 
 	     ((or 
@@ -390,7 +395,7 @@
 	       (string=? (substring file-line 0 6) ".model")
 	      )
 	      ;; (display (string-append "Found ., type = " (substring file-line 0 6) "\n"))
-	      '.MODEL
+	      ".MODEL"
 	     )
 	   
 	    ) ; inner cond
@@ -1313,7 +1318,7 @@
   (lambda (port)
     (display "*********************************************************\n" port)
     (display "* Spice file generated by gnetlist                      *\n" port)
-    (display "* spice-sdb version 3.31.2003 by SDB --                 *\n" port)
+    (display "* spice-sdb version 8.29.2003 by SDB --                 *\n" port)
     (display "* provides advanced spice netlisting capability.        *\n" port)
     (display "* Documentation at http://www.brorson.com/gEDA/SPICE/   *\n" port)
     (display "*********************************************************\n" port)
@@ -1327,7 +1332,7 @@
   (lambda (port)
     (display "*******************************\n" port)
     (display "* Begin .SUBCKT model         *\n" port)
-    (display "* spice-sdb ver 3.31.2003     *\n" port)
+    (display "* spice-sdb ver 8.29.2003     *\n" port)
     (display "*******************************\n" port)
   )
 )
@@ -1404,7 +1409,12 @@
       ) ;; end of if.
 
     ;; now write out netlist
-      (spice-sdb:write-netlist port packages) ;; does "packages" get executed automatically???
+    ;; **** Modified by kh to sort list of packages so Spice directives, etc. (A?) are output last,
+    ;; **** and in increasing order.
+      (if (spice-sdb:sort-refdes? (gnetlist:get-calling-flags))
+	  (spice-sdb:write-netlist port (sort packages spice-sdb:packsort))  ;; sort on refdes
+	  (spice-sdb:write-netlist port packages)                            ;; don't sort.
+      )
 
     ;; now write out .END(S) of netlist.
       (if (not (string=? schematic-type "normal schematic"))
@@ -1418,5 +1428,62 @@
     ;; now we're done.
       (close-output-port port))))
 
+;;---------------------------------------------------------------
+;; spice-sdb:packsort
+;;   Sort procedure to order refdes's alphabetically but
+;;   keep A? packages at the end of list so SPICE simulation
+;;   directives operate correctly.
+;;  This fcn written by Ken Healy to enable SPICE netlisting for 
+;;  Gnucap, which wants A refdes cards (i.e. SPICE directives) 
+;;  to appear last in the SPICE netlist.  Slightly modified
+;;  and incorporated into main spice-sdb release by SDB on 9.1.2003.
+;;  To output the netlist in sorted order, use the -s switch 
+;;  when invoking gnetlist from the command line.  Example:
+;;  gnetlist -s -g spice-sdb -o output.spice Schematic.sch
+;;  The default behavior (i.e. if -s is not specified) is to do
+;;  no sorting.
+;;---------------------------------------------------------------
+(define spice-sdb:packsort
+  (lambda (x y)
+    (let ((xdes (string-ref x 0)) 
+          (ydes (string-ref y 0))
+          (xnum (string-tail x 1)) 
+          (ynum (string-tail y 1)) 
+         )
 
+      (if (char-ci=? xdes ydes)
+          (if (string-ci<? xnum ynum) #t #f)
+          (if (char-ci=? xdes #\A) #f
+              (if (char-ci=? ydes #\A) #t 
+                  (if (char-ci<? xdes ydes) #t #f)))))))
+          
+
+(define (string-tail string start)
+  (substring string start (string-length string)))
+
+
+;;---------------------------------------------------------------
+;; spice-sdb:sort_refdes?
+;;   Returns #t or #f depending upon if -s was discovered in 
+;;   the calling flags given to gnetlist.   Used in conjunction with 
+;;   spice-sdb:packsort.
+;;   Calling form: (spice-sdb:sort-refdes? (gnetlist:get-calling-flags))
+;;   9.1.2003 -- SDB.
+;;---------------------------------------------------------------
+(define spice-sdb:sort-refdes?
+  (lambda (calling-flag-list)
+
+    (if (null? calling-flag-list)
+	  '#f                                             ;; return #f if null list -- sort_mode not found.
+	  (let*	((calling-pair (car calling-flag-list))   ;; otherwise look for sort_mode in remainder of list.
+		 (calling-flag (car calling-pair))
+		 (flag-value (cadr calling-pair))  )
+
+	    (if (string=? calling-flag "sort_mode")
+		flag-value                                               ;; return flag-value if sort_mode found
+		(spice-sdb:sort-refdes? (gnetlist:get-calling-flags))    ;; otherwise recurse until sort_mode is found
+	    )  ;; end if  
+	  )  ;; end of let*
+     )  ;; end of if
+))
 
