@@ -1,6 +1,6 @@
 *********************************************************
 * Spice file generated by gnetlist                      *
-* spice-sdb version 3.31.2003 by SDB --                 *
+* spice-sdb version 8.29.2003 by SDB --                 *
 * provides advanced spice netlisting capability.        *
 * Documentation at http://www.brorson.com/gEDA/SPICE/   *
 *********************************************************
