@@ -1,3 +1,14 @@
+2003-09-01 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* scheme/gnet-spice-sdb.scm, include/globals.h, include/prototype.h, 
+	src/g_netlist.c, src/g_register.c, src/globals.c, src/parsecmd.c:
+	Applied Stuart's latest changes to the spice-sdb netlister and added
+	the -s command line flag as well as gnetlist:get-calling-flags scheme
+	function.
+
+	* tests/amp.spice-sdb, darlington.spice-sdb: Updated tests files 
+	based on changes to the spice-sdb backend changes (mainly date).
+
 2003-08-31 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* configure.ac: Changed AC_CONFIG_HEADER to AM_CONFIG_HEADER
